SEC Backend: httpOnly cookie auth, security hardening, prod config
- JWT in httpOnly SameSite=Lax cookie, /me and /logout endpoints
- Cookie-first JwtFilter, Authorization header as fallback
- UNIQUE(email) constraint on USR table
- Swagger UI restricted to dev profile
- Dead code removed (logic/disabled/ package)
- Content-Security-Policy header (self + Google Fonts allowlist)
- CORS externalized to app.cors.allowed-origins, env-var-backed in prod
- CorsConfigurationSource wired with allowCredentials for cookies
- @Transactional on multi-repo service methods
- application-prod.properties with env-var-backed config
- Tests updated for cookie-based auth flow